IaaSStory/IaaSStory/Templates/MultiNIC/Final deployment/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "webCount": {
      "type": "int",
      "defaultValue": 2,
      "metadata": {
        "description": "Number of VMs to be deployed to the front end subnet."
      }
    },
    "fwCount": {
      "type": "int",
      "defaultValue": 1,
      "metadata": {
        "description": "Number of FW VMs to be deployed to the DMZ subnet."
      }
    },
    "vnetName": {
      "type": "string",
      "defaultValue": "WTestVNet",
      "metadata": {
        "description": "Name for the new VNet."
      }
    },
    "vnetPrefix": {
      "type": "string",
      "defaultValue": "192.168.0.0/16",
      "metadata": {
        "description": "CIDR prefix for the VNet address space."
      }
    },
    "dmzSubnetName": {
      "type": "string",
      "defaultValue": "DMZ",
      "metadata": {
        "description": "Name for the DMZ subnet."
      }
    },
    "dmzSubnetPrefix": {
      "type": "string",
      "defaultValue": "192.168.0.0/24",
      "metadata": {
        "description": "CIDR address prefix for the DMZ subnet."
      }
    },
    "frontEndSubnetName": {
      "type": "string",
      "defaultValue": "FrontEnd",
      "metadata": {
        "description": "Name for the front end subnet."
      }
    },
    "frontEndSubnetPrefix": {
      "type": "string",
      "defaultValue": "192.168.1.0/24",
      "metadata": {
        "description": "CIDR address prefix for the front end subnet."
      }
    },
    "backEndSubnetName": {
      "type": "string",
      "defaultValue": "BackEnd",
      "metadata": {
        "description": "Name for the back end subnet."
      }
    },
    "backEndSubnetPrefix": {
      "type": "string",
      "defaultValue": "192.168.2.0/24",
      "metadata": {
        "description": "CIDR address prefix for the back end subnet."
      }
    },
    "frontEndNSGName": {
      "type": "string",
      "defaultValue": "NSG-FrontEnd",
      "metadata": {
        "description": "Name for the NSG used to allow RDP, HTTP and HTPPS"
      }
    },
    "backEndNSGName": {
      "type": "string",
      "defaultValue": "NSG-BackEnd",
      "metadata": {
        "description": "Name for the NSG used to allow RDP, SQL, and block Internet"
      }
    },
    "stdStorageName": {
      "type": "string",
      "defaultValue": "stestvnetstoragestd",
      "metadata": {
        "description": "Name for standard storage account."
      }
    },
    "stdStorageType": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "allowedValues": [
        "Standard_LRS",
        "Standard_GRS",
        "Standard_ZRS"
      ],
      "metadata": {
        "description": "Storage type."
      }
    },
    "prmStorageName": {
      "type": "string",
      "defaultValue": "wtestvnetstorageprm",
      "metadata": {
        "description": "Name for premium storage account."
      }
    },
    "prmStorageType": {
      "type": "string",
      "defaultValue": "Premium_LRS",
      "allowedValues": [
        "Premium_LRS",
        "Premium_GRS",
        "Premium_ZRS"
      ],
      "metadata": {
        "description": "Storage type."
      }
    },
    "vmaIpAddress": {
      "type": "string",
      "defaultValue": "192.168.0.101",
      "metadata": {
        "description": "IP address for virtual appliance."
      }
    },
    "frontEndRouteTableName": {
      "type": "string",
      "defaultValue": "UDR-FrontEnd",
      "metadata": {
        "description": "Name for front end subnet route table."
      }
    },
    "backEndRouteTableName": {
      "type": "string",
      "defaultValue": "UDR-BackEnd",
      "metadata": {
        "description": "Name for back end subnet route table."
      }
    }  
  },
  "variables": {
    "fwVMSettings": {
      "vmSize": "Standard_A1",
      "adminUsername": "adminuser",
      "adminPassword": "adminP@ssw0rd",
      "publisher": "MicrosoftWindowsServer",
      "offer": "WindowsServer",
      "sku": "2012-R2-Datacenter",
      "version": "latest",
      "vmName": "FW",
      "osdisk": "osdiskfw",
      "nicName": "NICFW",
      "pipName": "PIPFW",
      "avsetName": "ASFW"
    },
    "webVMSettings": {
      "vmSize": "Standard_A1",
      "adminUsername": "adminuser",
      "adminPassword": "adminP@ssw0rd",
      "publisher": "MicrosoftWindowsServer",
      "offer": "WindowsServer",
      "sku": "2012-R2-Datacenter",
      "version": "latest",
      "vmName": "WEB",
      "osdisk": "osdiskweb",
      "nicName": "NICWEB",
      "pipName": "PIPWEB",
      "avsetName": "ASWEB"
    },
    "location": "[resourceGroup().location]",
    "vmStorageAccountContainerName": "vhds",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks',parameters('vnetName'))]",
    "frontEndSubnetRef": "[concat(variables('vnetID'),'/subnets/',parameters('frontEndSubnetName'))]",
    "backEndSubnetRef": "[concat(variables('vnetID'),'/subnets/',parameters('backEndSubnetName'))]",
    "dmzSubnetRef": "[concat(variables('vnetID'),'/subnets/',parameters('dmzSubnetName'))]"
  },
  "resources": [
  {
      "name": "[parameters('stdStorageName')]",
      "type": "Microsoft.Storage/storageAccounts",
      "location": "[resourceGroup().location]",
      "apiVersion": "2015-05-01-preview",
      "tags": {
        "displayName": "Storage Account - Simple"
      },
      "properties": {
        "accountType": "[parameters('stdStorageType')]"
      }
    },
    {
      "name": "[parameters('prmStorageName')]",
      "type": "Microsoft.Storage/storageAccounts",
      "location": "[resourceGroup().location]",
      "apiVersion": "2015-05-01-preview",
      "tags": {
        "displayName": "Storage Account - Premium"
      },
      "properties": {
        "accountType": "[parameters('prmStorageType')]"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('backEndNSGName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "NSG - Back End"
      },
      "properties": {
        "securityRules": [
          {
            "name": "allow-inbound-frontend",
            "properties": {
              "description": "Allow FE Subnet",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "[parameters('frontEndSubnetPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-inbound-rdp",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "deny-outbound-internet",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 100,
              "direction": "Outbound"
            }
          }

        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('frontEndNSGName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "NSG - Front End"
      },
      "properties": {
        "securityRules": [
          {
            "name": "allow-inbound-rdp",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-inbound-http",
            "properties": {
              "description": "Allow HTTP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow-inbound-https",
            "properties": {
              "description": "Allow HTTPS",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/routeTables",
      "name": "[parameters('backEndRouteTableName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "Route Table - Back End"
      },
      "properties": {
        "routes": [
          {
            "name": "RouteToFrontEnd",
            "properties": {
              "addressPrefix": "[parameters('frontEndSubnetPrefix')]",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "[parameters('vmaIpAddress')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/routeTables",
      "name": "[parameters('frontEndRouteTableName')]",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "Route Table - FrontEnd"
      },
      "properties": {
        "routes": [
          {
            "name": "RouteToBackEnd",
            "properties": {
              "addressPrefix": "[parameters('backEndSubnetPrefix')]",
              "nextHopType": "VirtualAppliance",
              "nextHopIpAddress": "[parameters('vmaIpAddress')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('vnetName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('frontEndNSGName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('backEndNSGName'))]",
        "[concat('Microsoft.Network/routeTables/', parameters('frontEndRouteTableName'))]",
        "[concat('Microsoft.Network/routeTables/', parameters('backEndRouteTableName'))]"
      ],
      "tags": {
        "displayName": "VNet"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('dmzSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('dmzSubnetPrefix')]"
            }
          },
          {
            "name": "[parameters('frontEndSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('frontEndSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('frontEndNSGName'))]"
              },
              "routeTable": {
                  "id": "[resourceId('Microsoft.Network/routeTables', parameters('frontEndRouteTableName'))]"
              }
            }
          },
          {
            "name": "[parameters('backEndSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('backEndSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('backEndNSGName'))]"
              },
              "routeTable": {
                  "id": "[resourceId('Microsoft.Network/routeTables', parameters('backEndRouteTableName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/publicIPAddresses",
      "location": "[variables('location')]",
      "name": "[concat(variables('fwVMSettings').pipName, copyindex(1))]",
      "properties": {
        "publicIPAllocationMethod": "dynamic"
      },
      "tags": {
        "displayName": "PublicIPAddresses - DMZ"
      },
      "copy": {
        "name": "webpipcount",
        "count": "[parameters('fwCount')]"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/publicIPAddresses",
      "location": "[variables('location')]",
      "name": "[concat(variables('webVMSettings').pipName, copyindex(1))]",
      "properties": {
        "publicIPAllocationMethod": "dynamic"
      },
      "tags": {
        "displayName": "PublicIPAddresses - Web"
      },
      "copy": {
        "name": "webpipcount",
        "count": "[parameters('webCount')]"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkInterfaces",
      "location": "[variables('location')]",
      "tags": {
        "displayName": "NetworkInterfaces - DMZ"
      },
      "name": "[concat(variables('fwVMSettings').nicName, copyindex(1))]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', variables('fwVMSettings').pipName, copyindex(1))]",
        "[concat('Microsoft.Network/virtualNetworks/', parameters('vnetName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "enableIPForwarding": true,
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[parameters('vmaIpAddress')]",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',concat(variables('fwVMSettings').pipName, copyindex(1)))]"
              },
              "subnet": {
                "id": "[variables('dmzSubnetRef')]"
              }
            }
          }
        ]
      },
      "copy": {
        "name": "fwniccount",
        "count": "[parameters('fwCount')]"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkInterfaces",
      "location": "[variables('location')]",
      "tags": {
        "displayName": "NetworkInterfaces - Web"
      },
      "name": "[concat(variables('webVMSettings').nicName, copyindex(1))]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', variables('webVMSettings').pipName, copyindex(1))]",
        "[concat('Microsoft.Network/virtualNetworks/', parameters('vnetName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',concat(variables('webVMSettings').pipName, copyindex(1)))]"
              },
              "subnet": {
                "id": "[variables('frontEndSubnetRef')]"
              }
            }
          }
        ]
      },
      "copy": {
        "name": "webniccount",
        "count": "[parameters('webCount')]"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Compute/availabilitySets",
      "name": "[variables('fwVMSettings').avsetName]",
      "location": "[variables('location')]",
      "tags": {
        "displayName": "AvailabilitySet - DMZ"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Compute/availabilitySets",
      "name": "[variables('webVMSettings').avsetName]",
      "location": "[variables('location')]",
      "tags": {
        "displayName": "AvailabilitySet - Web"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "name": "[concat(variables('fwVMSettings').vmName,copyindex(1))]",
      "type": "Microsoft.Compute/virtualMachines",
      "location": "[variables('location')]",
      "copy": {
        "name": "fwvmcount",
        "count": "[parameters('fwCount')]"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('fwVMSettings').nicName, copyindex(1))]",
        "[concat('Microsoft.Compute/availabilitySets/', variables('fwVMSettings').avsetName)]",
        "[concat('Microsoft.Storage/storageAccounts/', parameters('stdStorageName'))]"
      ],
      "tags": {
        "displayName": "VMs - DMZ"
      },
      "properties": {
        "availabilitySet": {
          "id": "[resourceId('Microsoft.Compute/availabilitySets', variables('fwVMSettings').avsetName)]"
        },
        "hardwareProfile": {
          "vmSize": "[variables('fwVMSettings').vmSize]"
        },
        "osProfile": {
          "computerName": "[concat(variables('fwVMSettings').vmName,copyindex(1))]",
          "adminUsername": "[variables('fwVMSettings').adminUsername]",
          "adminPassword": "[variables('fwVMSettings').adminPassword]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('fwVMSettings').publisher]",
            "offer": "[variables('fwVMSettings').offer]",
            "sku": "[variables('fwVMSettings').sku]",
            "version": "[variables('fwVMSettings').version]"
          },
          "osDisk": {
            "name": "[concat(variables('fwVMSettings').osdisk,copyindex(1))]",
            "vhd": {
              "uri": "[concat('http://', parameters('stdStorageName'), '.blob.core.windows.net/', variables('vmStorageAccountContainerName'), '/', variables('fwVMSettings').osdisk, copyindex(1),'.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('fwVMSettings').nicName,copyindex(1)))]"
            }
          ]
        }
      }
    },
    {
      "apiVersion": "2015-06-15",
      "name": "[concat(variables('webVMSettings').vmName,copyindex(1))]",
      "type": "Microsoft.Compute/virtualMachines",
      "location": "[variables('location')]",
      "copy": {
        "name": "webvmcount",
        "count": "[parameters('webCount')]"
      },
      "dependsOn": [
        "[concat('Microsoft.Network/networkInterfaces/', variables('webVMSettings').nicName, copyindex(1))]",
        "[concat('Microsoft.Compute/availabilitySets/', variables('webVMSettings').avsetName)]",
        "[concat('Microsoft.Storage/storageAccounts/', parameters('stdStorageName'))]"
      ],
      "tags": {
        "displayName": "VMs - Web"
      },
      "properties": {
        "availabilitySet": {
          "id": "[resourceId('Microsoft.Compute/availabilitySets', variables('webVMSettings').avsetName)]"
        },
        "hardwareProfile": {
          "vmSize": "[variables('webVMSettings').vmSize]"
        },
        "osProfile": {
          "computerName": "[concat(variables('webVMSettings').vmName,copyindex(1))]",
          "adminUsername": "[variables('webVMSettings').adminUsername]",
          "adminPassword": "[variables('webVMSettings').adminPassword]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('webVMSettings').publisher]",
            "offer": "[variables('webVMSettings').offer]",
            "sku": "[variables('webVMSettings').sku]",
            "version": "[variables('webVMSettings').version]"
          },
          "osDisk": {
            "name": "[concat(variables('webVMSettings').osdisk,copyindex(1))]",
            "vhd": {
              "uri": "[concat('http://', parameters('stdStorageName'), '.blob.core.windows.net/', variables('vmStorageAccountContainerName'), '/', variables('webVMSettings').osdisk, copyindex(1),'.vhd')]"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(variables('webVMSettings').nicName,copyindex(1)))]"
            }
          ]
        }
      }
    }
  ]
}
